--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "^14.0.0"
+    "next": "^14.0.0",
+    "@apollo/client": "^3.9.0",
+    "graphql": "^16.8.0",
+    "graphql-ws": "^5.14.0"
   },
   "devDependencies": {
     "typescript": "^5.3.0",
