--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "^14.0.0",
     "@apollo/client": "^3.9.0",
     "graphql": "^16.8.0",
-    "graphql-ws": "^5.14.0"
+    "graphql-ws": "^5.14.0",
+    "next": "^14.0.0",
+    "playwright": "^1.57.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.0",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "@types/react-dom": "^18.2.0",
+    "typescript": "^5.3.0"
   }
 }
